--- a/package.json
+++ b/package.json
@@ -21,18 +21,20 @@
     "down:dev": "docker compose --env-file .env.dev down",
     "down:test": "docker compose --env-file .env.test down",
     "down:prod": "docker compose --env-file .env.prod down"
-    },
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "packageManager": "pnpm@10.15.1",
   "dependencies": {
+    "axios": "^1.12.2",
     "bcrypt": "^6.0.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "knex": "^3.1.0",
     "kysely": "^0.28.8",
     "pg": "^8.16.3",
+    "pnpm": "^10.18.3",
     "zod": "^4.1.12"
   },
   "devDependencies": {
@@ -41,6 +43,7 @@
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.7.2",
     "@types/pg": "^8.15.5",
-    "dotenv-cli": "^10.0.0"
+    "dotenv-cli": "^10.0.0",
+    "tsx": "^4.20.6"
   }
 }
