--- a/.env.dev
+++ b/.env.dev
@@ -1,5 +1,5 @@
 PROJECT_NAME="boilerplate"
 ENVIRONMENT="development"
 DB_USER="user"
-DB_PASSWORD="Krawkpp1"
+DB_PASSWORD="Password123"
 DB_PORT=5432
