test: get balance by sdk

--- a/.env.dev
+++ b/.env.dev
@@ -1,7 +1,7 @@
 PROJECT_NAME="boilerplate"
 ENVIRONMENT="development"
 DB_USER="user"
-DB_PASSWORD="password"
+DB_PASSWORD="krawkpp1"
 DB_PORT=5432
 ATRIUM_BASE_URL="https://api.trade.atriunbroker.finance/"
 SPACE_BASE_URL="https://webhook.backup.spacedev.pro/atriun/"
