--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,11 @@
   "compilerOptions": {
     "target": "ES2020",
     "module": "commonjs",
+    "paths": {
+      "@/*": [
+        "src/*"
+      ]
+    },
     "lib": [
       "ES2020"
     ],
@@ -28,4 +33,3 @@
     "dist"
   ]
 }
-
