--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "jsonwebtoken": "^9.0.2",
     "knex": "^3.1.0",
     "kysely": "^0.28.8",
+    "minio": "^8.0.6",
     "pg": "^8.16.3",
     "pnpm": "^10.18.3",
     "ws": "^8.18.0",
