--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "knex": "^3.1.0",
     "kysely": "^0.28.8",
     "minio": "^8.0.6",
+    "multer": "^2.0.2",
     "pg": "^8.16.3",
     "pnpm": "^10.18.3",
     "ws": "^8.18.0",
@@ -44,8 +45,10 @@
     "@types/bcrypt": "^6.0.0",
     "@types/express": "^5.0.3",
     "@types/jsonwebtoken": "^9.0.10",
+    "@types/multer": "^2.0.0",
     "@types/node": "^24.7.2",
     "@types/pg": "^8.15.5",
+    "@types/uuid": "^10.0.0",
     "@types/ws": "^8.5.12",
     "dotenv-cli": "^10.0.0",
     "tsx": "^4.20.6"
