--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "multer": "^2.0.2",
     "pg": "^8.16.3",
     "pnpm": "^10.18.3",
+    "typescript": "^5.9.3",
+    "uuid": "^10.0.0",
     "ws": "^8.18.0",
     "zod": "^4.1.12"
   },
